<resources>
    <string name="app_name">TrafficApp</string>
    <string name="add_user">Add User</string>
    <string name="make_challan">Make Challan</string>
    <string name="textview">TextView</string>
    <string name="admin_home">Admin Home</string>
    <string name="register_users">REGISTER USERS</string>
    <string name="email_id">Email ID</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="traffic_app">Traffic App</string>
    <string name="signin">SignIn</string>
    <string name="sign_in">SIGN IN</string>
    <string name="number_plate">Number Plate</string>
    <string name="age">Age</string>
    <string name="rc_number">RC Number</string>
    <string name="about_violation">About Violation</string>
    <string name="capture_image">Capture Image</string>
    <string name="submit">SUBMIT</string>
    <string name="challans_list">Challans List</string>
    <string name="police_list">Police List</string>
</resources>