<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="651dp"
                    android:layout_height="54dp"
                    android:layout_weight="9"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/traffic_app"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#030D4A"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="124dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView9"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:text="@string/register_users"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwd"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="30"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/name"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="30"
                android:hint="Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/city"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="30"
                android:hint="City"
                android:inputType="text" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="30"
                android:hint="Phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/district"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="30"
                android:hint="District"
                android:inputType="text" />

            <EditText
                android:id="@+id/department"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="30"
                android:hint="Department"
                android:inputType="text" />

            <EditText
                android:id="@+id/stationid"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="30"
                android:hint="Station ID"
                android:inputType="text" />

            <Button
                android:id="@+id/register"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/register" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>