<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/challan_bck2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Make Challan"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/input"
            android:hint="First Name"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:background="@drawable/input"
            android:hint="Last Name"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:background="@drawable/input"
            android:inputType="phone"
            android:hint="Mobile Number"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:background="@drawable/input"
            android:inputType="textEmailAddress"
            android:hint="E-MAIL"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />






        <EditText
            android:id="@+id/plateNo"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:inputType="text"
            android:hint="@string/number_plate"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/rcNo"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:inputType="text"
            android:hint="@string/rc_number"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plateNo" />

        <EditText
            android:id="@+id/dlNo"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:inputType="text"
            android:background="@drawable/input"
            android:hint="DL Number"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcNo" />

        <EditText
            android:id="@+id/typeVehicle"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:hint="Type Of Vehicle"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcNo" />

        <EditText
            android:id="@+id/violation"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:inputType="text"
            android:hint="@string/about_violation"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeVehicle" />

        <EditText
            android:id="@+id/fine"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:inputType="text"
            android:hint="Fine"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/violation" />

        <Button
            android:id="@+id/capture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/capture_image" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#0D15AE"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="Vehicle Number Plate Picture" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="390dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/capture_image1" />



        <Button
            android:id="@+id/submit"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFC107"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    </LinearLayout>

</ScrollView>