<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:backgroundTint="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="651dp"
                    android:layout_height="54dp"
                    android:layout_weight="9"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Traffic App"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#030D4A"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="124dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo" />

            </LinearLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mid_toolbar"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="#EFEFEF"
                android:elevation="4dp"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="81dp">

                <TextView
                    android:id="@+id/AdminHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/admin_home"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/home_img"
                    android:layout_marginStart="40dp"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/home_img" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="25sp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#3F51B5"
                    android:textSize="20sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="30sp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/add_user"
                    app:srcCompat="@drawable/add_user_img"/>

                <Button
                    android:id="@+id/addUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="8dp"
                    android:text="@string/add_user"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="25sp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/add_edit_city"
                    app:srcCompat="@drawable/challan_img"/>

                <Button
                    android:id="@+id/makeChallan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="30dp"
                    android:layout_gravity="center"
                    android:text="@string/make_challan"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>